[gd_scene load_steps=9 format=3 uid="uid://cdu57vyksybj5"]

[ext_resource type="Script" uid="uid://176h86l343o2" path="res://scenes/ingame/player/launch_area_2d.gd" id="1_5n8wi"]
[ext_resource type="Texture2D" uid="uid://gon0ibs6u6n3" path="res://textures/cannon.png" id="2_mvbye"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8v81"]
size = Vector2(75, 76)

[sub_resource type="Curve" id="Curve_5n8wi"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.1685394), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_bf3um"]
curve = SubResource("Curve_5n8wi")

[sub_resource type="Curve" id="Curve_mvbye"]
_limits = [0.0, 3.0, 0.0, 1.0]
_data = [Vector2(0.045454532, 0.4044943), 0.0, 0.0, 0, 0, Vector2(1, 2.8988767), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_wlils"]
curve = SubResource("Curve_mvbye")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bf3um"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 1, 0)
angle_min = 1.0728835e-05
angle_max = 1.0728835e-05
inherit_velocity_ratio = 100.0
velocity_pivot = Vector3(0, -100, 0)
direction = Vector3(0, -100, 0)
spread = 45.089
flatness = 0.185
initial_velocity_min = 100.0
initial_velocity_max = 100.0
angular_velocity_min = -1.6093254e-05
angular_velocity_max = -1.6093254e-05
orbit_velocity_min = 9.49949e-08
orbit_velocity_max = 9.49949e-08
radial_velocity_min = -2.2351742e-05
radial_velocity_max = -2.2351742e-05
gravity = Vector3(0, -100, 0)
linear_accel_min = -100.0
linear_accel_max = 150.0
radial_accel_min = 99.99999
radial_accel_max = 99.99999
tangential_accel_min = -20.000002
tangential_accel_max = 19.999998
scale_min = 3.0
scale_max = 8.0
scale_curve = SubResource("CurveTexture_wlils")
color = Color(1, 0.9372549, 0, 1)
alpha_curve = SubResource("CurveTexture_bf3um")

[node name="LaunchArea2D" type="Area2D"]
script = ExtResource("1_5n8wi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.5, 1)
shape = SubResource("RectangleShape2D_l8v81")

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 3
offset_left = 52.0
offset_top = -37.0
offset_right = 82.0
offset_bottom = 40.0
fill_mode = 3

[node name="CannonSprite" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -22)
texture = ExtResource("2_mvbye")

[node name="CannonFireParticle" type="GPUParticles2D" parent="."]
position = Vector2(0, -74)
emitting = false
amount = 80
one_shot = true
speed_scale = 3.0
explosiveness = 0.8
randomness = 0.23
trail_lifetime = 0.1
trail_section_subdivisions = 3
process_material = SubResource("ParticleProcessMaterial_bf3um")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
